<resources>
    <string name="app_name">Naturonik</string>

    <string name="title_activity_product">ProductActivity</string>

    <string name="action_search">Поиск</string>
    <string name="search_hint">Введите название...</string>

    <string name="nav_account_title">Профиль</string>
    <string name="nav_favoutite_title">Избранное</string>
    <string name="nav_search_title">Поиск</string>
    <string name="nav_cart_title">Корзина</string>
    <string name="nav_main_title">Главная</string>
    <string name="action_back">Назад</string>
    <string name="action_favourite">Добавить в избранное</string>
    <string name="to_cart">Добавить в корзину</string>

    <string name="slider_peanut"> Арахис – прекрасный источник фолиевой кислоты,способствующей обновлению клеток.
        Содержащиеся в нем жиры оказывают легкое желчегонное действие и полезны при гастритах и язвенной болезни. </string>

    <string name="slider_pistachio"> Полезные свойства фисташек выражаются в регулировке артериального давления,
        снижении холестерина и в способности снимать воспаления. </string>

    <string name="slider_hazelnuts"> Высокое содержание калия, кальция и натрия делает фундук
        крайне полезным для нервной системы, отлично помогает при хронической усталости,
        а также незаменим для людей, работающих в условиях тяжелого физического труда. </string>

    <string name="slider_almond"> Миндаль укрепляет сердце и кости, а также контролирует уровень сахара в крови.
        Он увеличивает способность к обучению и снижает окислительный стресс в организме. </string>

    <string name="slider_walnut"> Ежедневное употребление грецкого ореха помогает
        справиться с заболеваниями сердца, мозга и печени. </string>

    <string name="slider_cashew"> Кешью обладает широким спектром полезных свойств,
        этот орех оказывает антибактериальное, противовоспалительное, тонизирующее  и восстанавливающее действие. </string>

    <string name="slider_macadamia"> Орехи макадамия богаты полезными жирами,
        которые увеличивают уровень “хорошего” холестерина и благотворно влияют на кожу и волосы. </string>
    <string name="action_add">Добавить</string>

</resources>
