<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_account_title" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favoutite_title" />

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_naturonik"
        android:title="@string/nav_main_title" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search_title" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/nav_cart_title" />
</menu>